--- a/css/style.css
+++ b/css/style.css
@@ -31,7 +31,7 @@ body{
     --br6: 45%;
     --br7: 55%;
     --br8: 70%;
-    /* height / width for squere with border radius */
+    /* height / width for square with border radius */
     --height_s: 300px;
     --width_s: 300px;
 }
